# dm_colloc

./: .gitignore  ABS__Z__N_8cpp.html  ABS__Z__N_8cpp_source.html  ABS__Z__N_8hpp.html  ABS__Z__N_8hpp_source.html  ADD__1N__N_8cpp.html  ADD__1N__N_8cpp_source.html  ADD__1N__N_8hpp.html  ADD__1N__N_8hpp_source.html  ADD__NN__N_8cpp.html  ADD__NN__N_8cpp_source.html  ADD__NN__N_8hpp.html  ADD__NN__N_8hpp_source.html  ADD__PP__P_8cpp.html  ADD__PP__P_8cpp_source.html  ADD__PP__P_8hpp.html  ADD__PP__P_8hpp_source.html  ADD__QQ__Q_8cpp.html  ADD__QQ__Q_8cpp_source.html  ADD__QQ__Q_8hpp.html  ADD__QQ__Q_8hpp_source.html  ADD__ZZ__Z_8cpp.html  ADD__ZZ__Z_8cpp_source.html  ADD__ZZ__Z_8hpp.html  ADD__ZZ__Z_8hpp_source.html  CMakeLists.txt  COM__NN__D_8cpp.html  COM__NN__D_8cpp_source.html  COM__NN__D_8hpp.html  COM__NN__D_8hpp_source.html  DEG__P__N_8cpp.html  DEG__P__N_8cpp_source.html  DEG__P__N_8hpp.html  DEG__P__N_8hpp_source.html  DER__P__P_8cpp.html  DER__P__P_8cpp_source.html  DER__P__P_8hpp.html  DER__P__P_8hpp_source.html  DIV__NN__Dk_8cpp.html  DIV__NN__Dk_8cpp_source.html  (+234 more)
.github/workflows/: cmake-multi-platform.yml  deploy-doxygen.yml
d0/d10/: DIV__QQ__Q_8hpp.html  DIV__QQ__Q_8hpp_source.html
d0/d42/: classGui.html
d0/d43/: MOD__NN__N_8cpp.html  MOD__NN__N_8cpp_source.html
d0/d4c/: MUL__ZM__Z_8hpp.html  MUL__ZM__Z_8hpp_source.html
d0/d58/: LCM__NN__N_8hpp.html  LCM__NN__N_8hpp_source.html
d0/d72/: classPolynomial-members.html
d0/db9/: COM__NN__D_8hpp.html  COM__NN__D_8hpp_source.html
d0/dd1/: GCF__NN__N_8cpp.html  GCF__NN__N_8cpp_source.html
d0/df4/: HandlePolynomialFunctions_8hpp.html  HandlePolynomialFunctions_8hpp_source.html
d0/dfa/: classHandleNaturalFunctions-members.html
d1/d02/: MUL__NN__N_8hpp.html  MUL__NN__N_8hpp_source.html
d1/d12/: SUB__NN__N_8hpp.html  SUB__NN__N_8hpp_source.html
d1/d17/: DEG__P__N_8hpp.html  DEG__P__N_8hpp_source.html
d1/d36/: ADD__QQ__Q_8hpp.html  ADD__QQ__Q_8hpp_source.html
d1/d3e/: MUL__ZZ__Z_8hpp.html  MUL__ZZ__Z_8hpp_source.html
d1/d5e/: LongInteger_8cpp.html  LongInteger_8cpp_source.html
d1/d9b/: classLongNatural.html
d1/de1/: POZ__Z__D_8hpp.html  POZ__Z__D_8hpp_source.html
d2/d1d/: DER__P__P_8hpp.html  DER__P__P_8hpp_source.html
d2/d5a/: FAC__P__Q_8hpp.html  FAC__P__Q_8hpp_source.html
d2/d71/: TRANS__N__Z_8hpp.html  TRANS__N__Z_8hpp_source.html
d3/d25/: LongInteger_8hpp.html  LongInteger_8hpp_source.html
d3/da7/: LongNatural_8cpp.html  LongNatural_8cpp_source.html
d3/dab/: classHandleIntegerFunctions-members.html
d3/dad/: DIV__PP__P_8hpp.html  DIV__PP__P_8hpp_source.html
d3/dae/: Polynomial_8hpp.html  Polynomial_8hpp_source.html
d3/de9/: classHandlePolynomialFunctions-members.html
d3/df5/: NZER__N__B_8hpp.html  NZER__N__B_8hpp_source.html
d4/d01/: HandleIntegerFunctions_8cpp.html  HandleIntegerFunctions_8cpp_source.html
d4/d33/: COM__NN__D_8cpp.html  COM__NN__D_8cpp_source.html
d4/d75/: SUB__ZZ__Z_8hpp.html  SUB__ZZ__Z_8hpp_source.html
d4/dd3/: TRANS__Z__N_8hpp.html  TRANS__Z__N_8hpp_source.html
d4/dd7/: Polynomial_8cpp.html  Polynomial_8cpp_source.html
d5/d5c/: DIV__NN__Dk_8cpp.html  DIV__NN__Dk_8cpp_source.html
d5/d80/: TRANS__N__Z_8cpp.html  TRANS__N__Z_8cpp_source.html
d5/d84/: GCF__PP__P_8hpp.html  GCF__PP__P_8hpp_source.html
d5/d93/: LongRational_8cpp.html  LongRational_8cpp_source.html
d5/dbe/: LED__P__Q_8cpp.html  LED__P__Q_8cpp_source.html
d5/dd6/: MOD__NN__N_8hpp.html  MOD__NN__N_8hpp_source.html
d6/d06/: HandlePolynomialFunctions_8cpp.html  HandlePolynomialFunctions_8cpp_source.html
d6/d14/: ADD__1N__N_8cpp.html  ADD__1N__N_8cpp_source.html  ADD__NN__N_8cpp.html  ADD__NN__N_8cpp_source.html
d6/d22/: SUB__PP__P_8cpp.html  SUB__PP__P_8cpp_source.html
d6/d2f/: DEG__P__N_8cpp.html  DEG__P__N_8cpp_source.html
d6/d35/: Gui_8cpp.html  Gui_8cpp_source.html
d6/d4b/: classHandleRationalFunctions-members.html
d6/d4c/: MUL__QQ__Q_8hpp.html  MUL__QQ__Q_8hpp_source.html
d6/d7c/: classLongInteger-members.html
d6/d94/: GCF__NN__N_8hpp.html  GCF__NN__N_8hpp_source.html
d6/dae/: INT__Q__B_8hpp.html  INT__Q__B_8hpp_source.html
d6/db7/: DroidSans__ttf_8hpp.html  DroidSans__ttf_8hpp_source.html
d7/d22/: ioUtils_8cpp.html  ioUtils_8cpp_source.html
d7/d43/: MUL__ND__N_8hpp.html  MUL__ND__N_8hpp_source.html
d7/d5c/: HandleRationalFunctions_8hpp.html  HandleRationalFunctions_8hpp_source.html
d7/d74/: LongNatural_8hpp.html  LongNatural_8hpp_source.html
d7/d94/: MUL__QQ__Q_8cpp.html  (+1 more)
scripts/: build.sh  build_tests.sh  run.sh  run_tests.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+27 more)
src/: main.cpp
tests/: CMakeLists.txt
tests/N/: test_ADD_1N_N.cpp  test_ADD_NN_N.cpp  test_COM_NN_D.cpp  test_DIV_NN_Dk.cpp  test_DIV_NN_N.cpp  test_GCF_NN_N.cpp  test_LCM_NN_N.cpp  test_LongNatural.cpp  test_MOD_NN_N.cpp  test_MUL_ND_N.cpp  test_MUL_NN_N.cpp  test_MUL_Nk_N.cpp  test_N2.hpp  test_NZER_N_B.cpp  test_SUB_NDN_N.cpp  test_SUB_NN_N.cpp
tests/P/: test_ADD_PP_P.cpp  test_DEG_P_N.cpp  test_DER_P_P.cpp  test_DIV_PP_P.cpp  test_FAC_P_Q.cpp  test_GCF_PP_P.cpp  test_LED_P_Q.cpp  test_MOD_PP_P.cpp  test_MUL_PP_P.cpp  test_MUL_PQ_P.cpp  test_MUL_Pxk_P.cpp  test_NMR_P_P.cpp  test_Polynomial.cpp  test_SUB_PP_P.cpp
tests/Q/: test_ADD_QQ_Q.cpp  test_DIV_QQ_Q.cpp  test_INT_Q_B.cpp  test_LongRational.cpp  test_MUL_QQ_Q.cpp  test_RED_Q_Q.cpp  test_SUB_QQ_Q.cpp  test_TRANS_Q_Z.cpp
tests/Z/: test_ABS_Z_N.cpp  test_ADD_ZZ_Z.cpp  test_DIV_ZZ_Z.cpp  test_LongInteger.cpp  test_MOD_ZZ_Z.cpp  test_MUL_ZM_Z.cpp  test_MUL_ZZ_Z.cpp  test_POZ_Z_D.cpp  test_SUB_ZZ_Z.cpp  test_TRANS_N_Z.cpp  test_TRANS_Z_N.cpp  test_TRANS_Z_Q.cpp
(+262 files in other folders)
